--- a/LibSrd/LibSrd.csproj
+++ b/LibSrd/LibSrd.csproj
@@ -51,9 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conversion.cs" />
-    <Compile Include="EmailMe.cs" />
+    <Compile Include="EmailObj.cs" />
     <Compile Include="HtmlBuilder.cs" />
     <Compile Include="JsonSettings.cs" />
+    <Compile Include="Markdown.cs" />
     <Compile Include="XmlSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecretVariables.Designer.cs">
@@ -64,7 +65,6 @@
     <Compile Include="Result.cs" />
     <Compile Include="SDMenu.cs" />
     <Compile Include="SqlHelpers.cs" />
-    <Compile Include="WpfHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
