--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 /LibSrd/SecretVariables.Designer.cs
 /LibSrd/SecretVariables.resx
+/Tester/Tester.csproj
+/Tester
