--- a/LibSrd/LibSrd.csproj
+++ b/LibSrd/LibSrd.csproj
@@ -50,20 +50,20 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Conversion.cs" />
-    <Compile Include="EmailObj.cs" />
-    <Compile Include="HtmlBuilder.cs" />
-    <Compile Include="JsonSettings.cs" />
-    <Compile Include="XmlSettings.cs" />
+    <Compile Include="source\Conversion.cs" />
+    <Compile Include="source\EmailObj.cs" />
+    <Compile Include="source\HtmlBuilder.cs" />
+    <Compile Include="source\JsonSettings.cs" />
+    <Compile Include="source\XmlSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecretVariables.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>SecretVariables.resx</DependentUpon>
     </Compile>
-    <Compile Include="Result.cs" />
-    <Compile Include="SDMenu.cs" />
-    <Compile Include="SqlHelpers.cs" />
+    <Compile Include="source\Result.cs" />
+    <Compile Include="source\SDMenu.cs" />
+    <Compile Include="source\SqlHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
