EmailObj.cs fixes in both 4.8 and 8.
Rewording of README.md

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 /LibSrd/SecretVariables.resx
 /Tester/Tester.csproj
 /Tester
+/UsedEmojis.txt
+/LibSrd_NetCore/SecretVariables.resx
